@@ -2,8 +2,10 @@ Changes in version 1.8.1 beta (2009-07-16):
 --------------------------------------------
 - Significantly improved compatibility with wxMAC.
 - Updated premake build files to work properly also on Mac OS.
-- The thumbnail control (wxSFThumbail) is refreshed now when NULL shape canvas is set.
+- The thumbnail control (wxSFThumbnail) is refreshed when NULL shape canvas is set.
+- More accurate size change of text shapes.
 - Fixed possible crash after Cut/Undo/Redo/Delete operations.
+- Fixed displaying of bitmap shapes in the canvas thumbnail.
 
 Changes in version 1.8.0 beta (2009-06-10):
 --------------------------------------------
